--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "highlight.js": "^11.4.0",
+    "reveal.js": "^4.3.0",
     "tone": "^14.7.77",
     "webpack": "^5.66.0"
   },
